[package]
name = "blockchain"
version = "0.1.0"
authors = ["Barthet Virgile <virgile.barthet@u-psud.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.2"
rand = "0.8.2"
crossbeam-utils = "0.8.1"
clap = "~2.27.0"
sha2 = "0.9.3"
merkle = "1.11.0"
ring = "0.16.20"
bincode = "1.1.4"